; ModuleID = '/home/carl/AnghaBench/redis/src/extr_module.c_RM_KillForkChild.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_module.c_RM_KillForkChild.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@C_OK = common dso_local global i64 0, align 8
@REDISMODULE_OK = common dso_local global i32 0, align 4
@REDISMODULE_ERR = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @RM_KillForkChild(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = call i64 @TerminateModuleForkChild(i32 %4, i32 1)
  %6 = load i64, i64* @C_OK, align 8
  %7 = icmp eq i64 %5, %6
  br i1 %7, label %8, label %10

8:                                                ; preds = %1
  %9 = load i32, i32* @REDISMODULE_OK, align 4
  store i32 %9, i32* %2, align 4
  br label %12

10:                                               ; preds = %1
  %11 = load i32, i32* @REDISMODULE_ERR, align 4
  store i32 %11, i32* %2, align 4
  br label %12

12:                                               ; preds = %10, %8
  %13 = load i32, i32* %2, align 4
  ret i32 %13
}

declare dso_local i64 @TerminateModuleForkChild(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
